syntax = "proto3";

package com.github.jaitl.crawler.master.client;

import "google/protobuf/wrappers.proto";

message Task {
    string id = 1;
    string taskType = 2;
    string taskData = 3;
    int32 attempt = 4;
    google.protobuf.Int64Value lastUpdateMillis = 5;
    bool skipped = 6;
    string projectId = 7;
    string nextProjectId = 8;
    string baseDomain = 9;
}

message TasksBatch {
    string id = 1;
    string taskType = 2;
    repeated Task tasks = 3;
}

message TaskTypeWithBatchSize {
    string taskType = 1;
    int32 batchSize = 2;
}

message NewTasks {
    repeated Task tasks = 1;
}